tests/snapshots/snapshot_tests__array_tiling_tcpy.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_tiling_tcpy.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int acopy1_next i_next (Read-Int-Int a i_next)) Z) (Read-Int-Int acopy1_next Z))",
        "(= (Read-Int-Int (Write-Int-Int acopy_next S (Read-Int-Int a S)) Z) (Read-Int-Int acopy_next Z))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!5 i_next (Read-Int-Int a i_next)) Z) (Read-Int-Int Array-Int-Int!val!5 Z))",
    ],
}
