tests/snapshots/snapshot_tests__array_tripl_access_init.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_tripl_access_init.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!2 2 N) N) (Read-Int-Int Array-Int-Int!val!2 N))",
    ],
}
