tests/snapshots/snapshot_tests__array_tripl_access_init_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_tripl_access_init_const.vmt",
    status: Panic,
    used_instantiations: [],
}
