tests/snapshots/snapshot_tests__array_two_counters_add.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_two_counters_add.vmt",
    status: Timeout,
    used_instantiations: [],
}
